Revision history for Perl extension Text::Table.

1.121       ( Thu May 26 21:22:21 IDT 2011 )
- Convert t/10_Table.t to Test-Count.
- Refactored t/10_Table.t .
- Refactored lib/Text/Table.pm

1.120       ( Sat May 14 09:52:08 IDT 2011 )
- Convert the build system to Module::Build :
    - Build.PL and inc/Test/Run/Builder.pm .
- Made the README more meaningful and concise (instead of a copy-and-paste
from the documentation.)
- Convert t/10_Table.t to Test::More.

1.119       ( Sat May 14 07:33:25 IDT 2011 )
- Fix the Copyright to say Anno first and Shlomi Fish later.
    - thanks to Zed Pobre.

1.118
- Convert to the ISC license.

1.117 Wed Apr 20 22:26:43 IDT 2011
- add the callback ("sub { ... }")-based ->rule() method to render each 
section in a rule differently.
- Add SHLOMIF as the maintainer.
- Add t/pod.t and t/pod-coverage.t . Documented $table->stringify() and 
$table->table_height().

1.116 Sa 28 Aug 2010 22:00:56 CEST
- added color support

1.115 Do 13 Mai 2010 15:50:46 CEST
- Bug when $/ is set to undef

1.114 Sat Feb 16 13:52:19 CET 2008
- Changed the documentation to reflect the possibility of multiline
  data (by daotoad).
      Sun May 11 13:37:44 CEST 2008
- Fixed spurious warning with ->load([])
- Released

1.107 Tue Sep 21 20:47:07 CEST 2004
- Added a feature where rows with embedded newlines are expanded
  into following rows. (by Josh Jore)
- Added a feature where ->add and ->load return the table object
  enabling chained method calls. (by Josh Jore)
- Added auto-initialisation.  An unspecified table creates the
  requisite number of title-less columns on first data entry.

1.102 Fri Sep 12 20:59:34 CEST 2003
- Added features align_title and align_title_lines
- fixed a bug with samples, which weren't honored in title alignment in
  a table with no data
- planned for release 6

1.100 Fri Sep 12 17:34:40 CEST 2003
- Version jump to make module version and cvs version equal (and compatible)

0.05 Sun Feb 16 17:51:49 CET 2003