@@ -6,7 +6,7 @@ build_requires:
   Test::More: 0
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3617'
+generated_by: 'Module::Build version 0.3607'
 keywords:
   - art
   - ascii
