@@ -1,5 +1,8 @@
 Revision history for Perl extension Text::Table.
 
+- Fix https://rt.cpan.org/Public/Bug/Display.html?id=68631 - passing
+hashrefs as separators.
+
 1.121       ( Thu May 26 21:22:21 IDT 2011 )
 - Convert t/10_Table.t to Test-Count.
 - Refactored t/10_Table.t .
